# zero2prod

./: Cargo.toml  Dockerfile  recipe.json
.github/workflows/: audit.yml  general.yml
configuration/: base.yaml  production.yaml
migrations/: 20230506090607_make_status_not_null_in_subscriptions.sql  20230514102323_seed_user.sql  20230528084816_create_newsletter_issues_table.sql  20230528085519_create_issue_delivery_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  main2.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/newsletters/: post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
